--- a/.gitignore
+++ b/.gitignore
@@ -167,5 +167,5 @@ atmosphere
 Simple_Transmission.h5
 spectra.csv
 download_spectra.sh
-
+Simple_Transmission_retrieval.h5
 HD_209458_b_3.11218_5413_51.tbl
