Assignment3_TaskC Plots added

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ spectra.csv
 download_spectra.sh
 Simple_Transmission_retrieval.h5
 HD_209458_b_3.11218_5413_51.tbl
+transmission_retrieval_nestle.h5
