Simple_Transmission_retrieval_TaskD.h5 added

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ download_spectra.sh
 Simple_Transmission_retrieval.h5
 HD_209458_b_3.11218_5413_51.tbl
 transmission_retrieval_nestle.h5
+Simple_Transmission_retrieval_TaskD.h5
